<?xml version="1.0"?>
<package>
  <name>rbsherpa_hl_gazebo</name>
  <version>0.0.0</version>
  <description>The rbsherpa_hl_gazebo package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rbsherpa_hl_control</build_depend>
  <build_depend>rbsherpa_hl_description</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rbsherpa_hl_control</run_depend>
  <run_depend>rbsherpa_hl_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <export>
 	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
