<?xml version="1.0"?>
<package>
  <name>rbvogui_gazebo</name>
  <version>0.0.0</version>
  <description>The rbvogui_gazebo package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>
  <maintainer email="jgomez@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rbvogui_control</build_depend>
  <build_depend>rbvogui_description</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rbvogui_control</run_depend>
  <run_depend>rbvogui_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <export>
 	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
