<?xml version="1.0"?>
<package>
  <name>rbvogui_sim_bringup</name>
  <version>0.0.0</version>
  <description>The rbvogui_sim_bringup package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rbvogui_control</run_depend>
  <run_depend>rbvogui_description</run_depend>
  <run_depend>rbvogui_pad</run_depend>

</package>
